--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "webpack serve --node-env development --config ./build/webpack.dev.js --progress",
     "build:stage": "webpack --config ./build/webpack.dev.js --progress",
-    "build:prod": "webpack --config ./build/webpack.prod.js --progress"
+    "build:prod": "webpack --config ./build/webpack.prod.js --progress",
+    "fix": "eslint --fix",
+    "formatter": "prettier --write"
   },
   "keywords": [],
   "author": "",
@@ -21,14 +23,26 @@
   },
   "devDependencies": {
     "@babel/core": "^7.14.0",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "chalk": "^4.1.1",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "css-loader": "^5.2.4",
+    "eslint": "^7.25.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-vue": "^7.9.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
+    "husky": "^6.0.0",
+    "lint-staged": "^10.5.4",
     "mini-css-extract-plugin": "^1.6.0",
     "node-sass": "^5.0.0",
     "postcss-loader": "^5.2.0",
+    "prettier": "^2.2.1",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
     "stylus-loader": "^5.0.0",
@@ -39,5 +53,16 @@
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.7.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --write",
+      "eslint --fix"
+    ]
   }
 }
