--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-project-webpack-simple",
   "version": "1.0.0",
-  "description": "",
+  "description": "webpack工程化打包--vue项目--模板",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -36,11 +36,14 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-vue": "^7.9.0",
     "file-loader": "^6.2.0",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^5.3.1",
     "husky": "^6.0.0",
     "lint-staged": "^10.5.4",
     "mini-css-extract-plugin": "^1.6.0",
+    "node-notifier": "^9.0.1",
     "node-sass": "^5.0.0",
+    "portfinder": "^1.0.28",
     "postcss-loader": "^5.2.0",
     "prettier": "^2.2.1",
     "sass-loader": "^11.0.1",
